--- a/index.html
+++ b/index.html
@@ -325,7 +325,7 @@
           </div>
         </div>
         <div class="col-lg-6">
-          <h3 class="resume-title">Professional Experience</h3>
+          <!--<h3 class="resume-title">Professional Experience</h3>-->
           <div class="resume-item">
             <h4>Secondary School</h4>
             <h5>2017 - 2018</h5>
