--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
 
       </div>
 
-    </div><!-- End Counts -->-->
+    </div><!-- End Counts -->
 
     <!-- ======= Skills  ======= -->
     <div class="skills container">
